WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71600
--webkit-visual-word crash when create legacy position for shadowRoot
https://bugs.webkit.org/show_bug.cgi?id=71600
Summary
--webkit-visual-word crash when create legacy position for shadowRoot
Xiaomei Ji
Reported
2011-11-04 17:26:39 PDT
crash in previousRootInlineBox due to pass in shadowRoot node to create legacy position.
Attachments
patch w/ layout test
(4.37 KB, patch)
2011-11-04 17:40 PDT
,
Xiaomei Ji
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaomei Ji
Comment 1
2011-11-04 17:40:09 PDT
Created
attachment 113740
[details]
patch w/ layout test
Ryosuke Niwa
Comment 2
2011-11-10 10:45:25 PST
Comment on
attachment 113740
[details]
patch w/ layout test View in context:
https://bugs.webkit.org/attachment.cgi?id=113740&action=review
> LayoutTests/editing/selection/move-by-word-visually-crash-test-textarea.html:4 > + try {
Why do we need try?
> LayoutTests/editing/selection/move-by-word-visually-crash-test-textarea.html:16 > + sel = window.getSelection(); > + sel.modify("move", "left", "-webkit-visual-word"); > + sel.modify("move", "left", "-webkit-visual-word");
This can be written as: getSelection().modify("move", "left", "-webkit-visual-word"); getSelection().modify("move", "left", "-webkit-visual-word");
Xiaomei Ji
Comment 3
2011-11-10 11:52:18 PST
Committed
r99886
: <
http://trac.webkit.org/changeset/99886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug