Source/WebCore: --webkit-visual-word crash when create legacy position for shadowRoot https://bugs.webkit.org/show_bug.cgi?id=71600

Reviewed by Ryosuke Niwa.

Inside textarea, the shadowed text node's previous leaf node could be the
shadowRoot node, which cause assert exception in creating legacy position based
on such node. Exit previousRootInlineBox() when reach shadowRoot node.

It does not cause problem when looking for text node's next leaf node. Adding
the same checking in nextRootInlineBox just to be safe.

Test: editing/selection/move-by-word-visually-crash-test-textarea.html

* editing/visible_units.cpp:
(WebCore::previousRootInlineBox):
(WebCore::nextRootInlineBox):

LayoutTests: --webkit-visual-word crash when create legacy position for shadowRoot
https://bugs.webkit.org/show_bug.cgi?id=71600

Reviewed by Ryosuke Niwa.

* editing/selection/move-by-word-visually-crash-test-textarea-expected.txt: Added.
* editing/selection/move-by-word-visually-crash-test-textarea.html: Added.


Canonical link: https://commits.webkit.org/88448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99886 268f45cc-cd09-0410-ab3c-d52691b4dbfc